# SocialBridge

./: .dockerignore  .gitignore  README.md  Readme.md  docker-compose.yml
docker/postgres/: Dockerfile
docker/python/: Dockerfile  entrypoint-celerybeat.sh  entrypoint-celeryworker.sh  entrypoint-flower.sh  entrypoint.sh
env/examples/: backend.env.example
src/: conftest.py  main.py  pyproject.toml  pytest.ini
src/alembic/: env.py
src/alembic/versions/: 229ba755a8e6_event_project_change_from_one2one_to_.py  438a2d788e31_user_timestamped.py  6e89a3cc925d_commnet_model.py  75cb243ad6f0_ngo_model.py  76858a86dce0_new_column_user_account_type.py  77324ed72cb6_event_model.py  776e2c8be608_like_model.py  cf0c775dd340_user_model.py  d67bb3e15efd_relationships_post_project.py  ef37162c18ac_project_model.py  f004f928371f_company_model.py  f97764c21b6b_post_model.py
src/social_bridge/: __init__.py  auth.py  celery.py  config.py  database.py  dependencies.py  jinja_config.py  mail.py  main.py  media.py  models.py  tasks.py
src/social_bridge/repositories/: ngo.py  posts.py  users.py
src/social_bridge/routers/: ngo.py  posts.py  users.py
src/social_bridge/schemas/: common.py  ngo.py  posts.py  users.py
src/social_bridge/static/templates/emails/: confirmation_email.html  password_reset.html
src/tests/: test_database.py
src/tests/factories/: common.py  users.py
src/tests/test_repositories/: test_users.py
src/tests/test_routers/: test_users.py
